# real_estate_price_prediction

./: Dockerfile  README.md  predict.ipynb  predict.py  pyproject.toml  test_service.py
notebooks/: predict.ipynb
src/: frontend-deploy.py  predict.py  streamlit-deploy.py  test_service.py  train.py
